<resources>
    <string name="app_name">Exercise SQLite</string>
    <string name="dk">Daftar Kontak</string>
    <string name="td">Tambah Data</string>
    <string name="na">Nama</string>
    <string name="telp">Nomor Telepon</string>
    <string name="em">Email</string>
    <string name="al">Alamat</string>
    <string name="btnsimpan">Simpan</string>
    <string name="mskna">Masukkan Nama</string>
    <string name="msktelp">Masukkan Nomor Telepon</string>
    <string name="mskemail">Masukkan Email</string>
    <string name="mskal">Masukkan Alamat</string>
</resources>
