<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".tambah_data">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/td"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/na"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=":"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/addnama"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/mskna"
                    android:inputType="textPersonName" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/telp"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=":"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/addNoTelp"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/msktelp"
                    android:inputType="phone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/em"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=":"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/addEmail"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/mskemail"
                    android:inputType="textEmailAddress" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center|left"
                    android:text="@string/al"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text=":"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/addAlamat"
                    android:layout_width="240dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/mskal"
                    android:inputType="text" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:onClick="run"
            android:text="@string/btnsimpan"
            tools:ignore="onClick" />
    </LinearLayout>
</ScrollView>

